--- a/fundo.html
+++ b/fundo.html
@@ -18,6 +18,7 @@
         }
         div#q2{
             background-image: url('imagens-cap19/wallpaper002.jpg');
+            background-size: 300px;
         }
         div#q3{
             background-image: url('imagens-cap19/pattern003.png');
