--- a/fundo 3.html
+++ b/fundo 3.html
@@ -6,11 +6,15 @@
     <title>da bom po </title>
     <style>
        body{
-        background-color: black;
+        /*background-color: black;
         background-image: url('imagens-cap19/wallpaper002.jpg');
         background-repeat: no-repeat;
-         background-size: cover;
+        
          background-position: center center;
+         background-attachment: fixed;*/
+         background: black  url('imagens-cap19/wallpaper002.jpg') center center no-repeat fixed;
+background-size: cover;
+/*ordem para fazer o background: cor imagem posição repetiro ou não [size] fixo ou não*/
        }
        /*
        para fazzer a imagem de fundo tem tres formas 
@@ -25,6 +29,7 @@
         width: 500px;
         border-radius: 10px;
         margin: auto;
+        padding: 0px 10px 10px 10px;
        }
     </style>
 </head>
@@ -32,6 +37,17 @@
     <main>
         <h1>testando </h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, cupiditate eligendi voluptatum dolor adipisci aut magni ab dignissimos. Eum provident nostrum obcaecati enim alias, aut earum quod omnis sunt dolorum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis blanditiis ad veniam itaque quo explicabo voluptatum quam, ut earum facilis! Harum consectetur ipsum dignissimos quis placeat aliquid, eum quia sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur porro facilis alias laudantium aliquam voluptates quo? Possimus natus quam, nisi explicabo esse temporibus, illo iusto nulla ut dolorem, iste unde.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, cupiditate eligendi voluptatum dolor adipisci aut magni ab dignissimos. Eum provident nostrum obcaecati enim alias, aut earum quod omnis sunt dolorum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis blanditiis ad veniam itaque quo explicabo voluptatum quam, ut earum facilis! Harum consectetur ipsum dignissimos quis placeat aliquid, eum quia sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur porro facilis alias laudantium aliquam voluptates quo? Possimus natus quam, nisi explicabo esse temporibus, illo iusto nulla ut dolorem, iste unde.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, cupiditate eligendi voluptatum dolor adipisci aut magni ab dignissimos. Eum provident nostrum obcaecati enim alias, aut earum quod omnis sunt dolorum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis blanditiis ad veniam itaque quo explicabo voluptatum quam, ut earum facilis! Harum consectetur ipsum dignissimos quis placeat aliquid, eum quia sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur porro facilis alias laudantium aliquam voluptates quo? Possimus natus quam, nisi explicabo esse temporibus, illo iusto nulla ut dolorem, iste unde.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, cupiditate eligendi voluptatum dolor adipisci aut magni ab dignissimos. Eum provident nostrum obcaecati enim alias, aut earum quod omnis sunt dolorum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis blanditiis ad veniam itaque quo explicabo voluptatum quam, ut earum facilis! Harum consectetur ipsum dignissimos quis placeat aliquid, eum quia sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur porro facilis alias laudantium aliquam voluptates quo? Possimus natus quam, nisi explicabo esse temporibus, illo iusto nulla ut dolorem, iste unde.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, cupiditate eligendi voluptatum dolor adipisci aut magni ab dignissimos. Eum provident nostrum obcaecati enim alias, aut earum quod omnis sunt dolorum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis blanditiis ad veniam itaque quo explicabo voluptatum quam, ut earum facilis! Harum consectetur ipsum dignissimos quis placeat aliquid, eum quia sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur porro facilis alias laudantium aliquam voluptates quo? Possimus natus quam, nisi explicabo esse temporibus, illo iusto nulla ut dolorem, iste unde.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, cupiditate eligendi voluptatum dolor adipisci aut magni ab dignissimos. Eum provident nostrum obcaecati enim alias, aut earum quod omnis sunt dolorum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis blanditiis ad veniam itaque quo explicabo voluptatum quam, ut earum facilis! Harum consectetur ipsum dignissimos quis placeat aliquid, eum quia sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur porro facilis alias laudantium aliquam voluptates quo? Possimus natus quam, nisi explicabo esse temporibus, illo iusto nulla ut dolorem, iste unde.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, cupiditate eligendi voluptatum dolor adipisci aut magni ab dignissimos. Eum provident nostrum obcaecati enim alias, aut earum quod omnis sunt dolorum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis blanditiis ad veniam itaque quo explicabo voluptatum quam, ut earum facilis! Harum consectetur ipsum dignissimos quis placeat aliquid, eum quia sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur porro facilis alias laudantium aliquam voluptates quo? Possimus natus quam, nisi explicabo esse temporibus, illo iusto nulla ut dolorem, iste unde.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, cupiditate eligendi voluptatum dolor adipisci aut magni ab dignissimos. Eum provident nostrum obcaecati enim alias, aut earum quod omnis sunt dolorum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis blanditiis ad veniam itaque quo explicabo voluptatum quam, ut earum facilis! Harum consectetur ipsum dignissimos quis placeat aliquid, eum quia sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur porro facilis alias laudantium aliquam voluptates quo? Possimus natus quam, nisi explicabo esse temporibus, illo iusto nulla ut dolorem, iste unde.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, cupiditate eligendi voluptatum dolor adipisci aut magni ab dignissimos. Eum provident nostrum obcaecati enim alias, aut earum quod omnis sunt dolorum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis blanditiis ad veniam itaque quo explicabo voluptatum quam, ut earum facilis! Harum consectetur ipsum dignissimos quis placeat aliquid, eum quia sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur porro facilis alias laudantium aliquam voluptates quo? Possimus natus quam, nisi explicabo esse temporibus, illo iusto nulla ut dolorem, iste unde.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, cupiditate eligendi voluptatum dolor adipisci aut magni ab dignissimos. Eum provident nostrum obcaecati enim alias, aut earum quod omnis sunt dolorum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis blanditiis ad veniam itaque quo explicabo voluptatum quam, ut earum facilis! Harum consectetur ipsum dignissimos quis placeat aliquid, eum quia sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur porro facilis alias laudantium aliquam voluptates quo? Possimus natus quam, nisi explicabo esse temporibus, illo iusto nulla ut dolorem, iste unde.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, cupiditate eligendi voluptatum dolor adipisci aut magni ab dignissimos. Eum provident nostrum obcaecati enim alias, aut earum quod omnis sunt dolorum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis blanditiis ad veniam itaque quo explicabo voluptatum quam, ut earum facilis! Harum consectetur ipsum dignissimos quis placeat aliquid, eum quia sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur porro facilis alias laudantium aliquam voluptates quo? Possimus natus quam, nisi explicabo esse temporibus, illo iusto nulla ut dolorem, iste unde.</p>
+
     </main>
 </body>
 </html>
