--- a/fundo4.html
+++ b/fundo4.html
@@ -5,21 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>testanto movimento de caixa vertical </title>
     <style>
-        #conterner {
-background-color: blueviolet;
-height: 500px;
-width: 500px;
+        section {
+            background-image: url('imagens-cap19/target001.png');
+            background-size: 100% 100%;
+            position: relative;
+     background-color: blueviolet;
+ height: 96vh;
+   padding:10px;
+
 
         }
-        #conteudo{
+        article{
+            background-image: url('imagens-cap19/target001.png');
+             background-size: 100% 100%;
+
+            position:absolute ;
+       height: 200px;
+       width: 400px;
+        background-color: aqua;
+
+       left: 50%;
+       top: 50%;
+transform: translate(-50%, -50%);
 
         }
+        
     </style>
 </head>
 <body>
-    <section id="conterner ">
-<article id="contudo">
-
+    <section >
+        
+<article >
 </article>
     </section>
 </body>
